--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,13 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .footer_background {
-  background-image: url("Layer_1.png");
   width: 100%;
   height: 307px;
-  margin-top: 50px;
 }
 .footer_image {
   width: 120.42px;
@@ -20,8 +18,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  gap: 50px;
-  margin-bottom: 200px;
+  gap: 30px;
+  padding-bottom: 200px;
   color: #fff;
   position: relative;
   left: 60px;
@@ -31,26 +29,17 @@
   margin-left: 170px;
 }
 
-.footer_features > ul li {
-  color: #fff;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 35px;
-  margin-left: 50px;
-}
-
 .footer ul li {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  color: #fff;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 12px;
+  color: var(--light-black, #545454);
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
   font-style: normal;
   font-weight: 400;
-  line-height: 35px;
+  line-height: 40px;
+
   margin-left: 50px;
 }
 
@@ -59,11 +48,11 @@
 }
 .footer_contact > ul li {
   position: relative;
-  bottom: 15px;
+  bottom: 20px;
 }
 .footer_company > ul li {
   position: relative;
-  bottom: 50px;
+  bottom: 62px;
 }
 .social_media {
   display: flex;
@@ -72,7 +61,7 @@
   flex-direction: column;
   gap: 10px;
   position: relative;
-  bottom: 20px;
+  bottom: 30px;
   margin-left: 30px;
 }
 .terms {
@@ -84,6 +73,7 @@
   gap: 550px;
   background-color: #d4d4d4;
   margin-left: 20px;
+  width: 100%;
 }
 .terms > ul {
   display: flex;
