--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -17,17 +18,17 @@
   overflow: auto;
   position: fixed;
   box-shadow: 0 0 2px 0 #000000;
-  padding: 12px 120px 12px 120px;
+  padding: 12px 96px 12px 96px;
   gap: 66px;
 }
 .resources {
   outline: none;
   border: none;
   color: #545454;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: normal;
 }
 .nav-items {
@@ -38,28 +39,41 @@
   list-style: none;
   gap: 5px;
   text-decoration: none;
+  margin-right: 30px;
 }
 .nav-items > ul,
-li,
-button {
+li {
   display: flex;
   justify-content: flex-end;
   align-items: right;
   flex-direction: row;
   list-style: none;
   text-decoration: none;
-  gap: 10px;
+  gap: 56px;
   color: #545454;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
+.login_signup_btn {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: center;
+  gap: 40px;
+  margin-left: 120px;
+}
 
 .links {
   color: #545454;
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17.07px;
+}
+.home {
+  font-weight: 600;
 }
 .logo {
   display: flex;
@@ -72,17 +86,18 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 148px;
+  width: 102px;
   height: 36px;
   border: none;
   border-radius: 5px;
   background-color: #fff;
   color: #545454;
   margin-right: 35px;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   border-radius: 6px;
   border: 1px solid #4ead1f;
   padding: 8px 24px;
+  white-space: nowrap;
 }
 .login {
   display: flex;
@@ -90,11 +105,12 @@ button {
   align-items: center;
   margin-left: 5px;
   background-color: #4ead1f;
-  width: 70px;
-  height: 35px;
+  width: 92px;
+  height: 36px;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
   color: whitesmoke;
+  padding: 8px 24px 8px 24px;
   margin-right: 10px;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
