--- a/src/components/Maincontent.css
+++ b/src/components/Maincontent.css
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container {
@@ -18,284 +19,397 @@ body {
   margin-right: 100px;
 }
 .landing_page {
-  width: 480px;
-  height: 400px;
-  margin-bottom: 20px;
+  width: 1280px;
+  height: 568.12px;
+  margin-top: 75px;
+  background-image: url("Hero Section - Background.png");
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  margin-left: 20px;
 }
-
-.task {
-  background-color: #c0f0a8;
+.landing_page_text {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-self: stretch;
   flex-direction: column;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  padding-top: 118px;
-  width: 1040px;
-  height: 770px;
-}
-.task > h1 {
-  margin-top: 50px;
-  margin-bottom: 15px;
-}
-.task > p {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  text-align: center;
+  gap: 19.71px;
 }
-.get_started {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #de9244;
-  border-radius: 6px;
-  border: none;
-  height: 30px;
-  width: 100px;
-  color: white;
-  font-size: smaller;
-  margin-bottom: 30px;
-  margin-top: 5px;
+.landing_page_text h2 {
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-top: 200px;
+  margin-right: 595px;
 }
-/* section two */
-.task_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 100px;
-  padding: 19.2px 14.4px;
-  margin-left: 40px;
-}
-.my_task_wrapper {
-  width: 483px;
-  height: 446px;
-  padding: 20px 15px;
-  margin-top: 50px;
-  border-radius: 6.4px;
-  background: #fff;
-  box-shadow: 2px 0px 8px -2px rgba(0, 0, 0, 0.4);
-}
-.my_task {
-  display: flex;
-  justify-content: flex-start;
-  align-items: left;
-  flex-direction: column;
-  padding-top: 10px;
-}
-
-/*create new task label*/
-.form_image {
-  margin-top: 50px;
-  margin-left: 10px;
-}
-.text {
-  font-size: 18px;
+.landing_page_text p {
+  color: #fff;
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  font-family: "Noto Sans", sans-serif;
+  align-self: stretch;
+  margin-left: 158px;
+}
+.get_started_button {
+  width: 148px;
+  height: 36px;
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  border: 1px solid #4ead1f;
+  color: #fff;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17.25px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  background-color: black;
+  white-space: nowrap;
+  margin-left: 158px;
+  margin-top: 24px;
+}
+.hero_section_text_wrapper {
+  height: 209px;
+  padding: 96px 96px 24px 96px;
+  gap: 48px;
+  width: 1280px;
+  align-self: stretch;
+}
+.hero_section_text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 4px;
+  color: var(--light-black, #545454);
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.hero_section_text h2 {
+  color: #1c1917;
+}
+.hero_section_text p {
   color: #545454;
 }
-.task_text {
+.sample_image {
+  width: 1160px;
+  height: 551px;
+}
+.sample {
+  padding: 0 36px;
+  border-radius: 0px 0px 6px 6px;
+  background: linear-gradient(
+    360deg,
+    rgba(78, 173, 31, 0.3) 0%,
+    rgba(84, 84, 84, 0) 100%
+  );
+}
+.sample_container {
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  padding: 0px 60px 76px 60px;
   flex-direction: column;
-  margin-top: 120px;
-  white-space: nowrap;
-  padding-right: 50px;
+  align-items: center;
+  gap: 72px;
+  align-self: stretch;
+  background: linear-gradient(
+      360deg,
+      rgba(84, 84, 84, 0.1) 0%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    #fff;
 }
-.task_text > h2 {
-  margin-right: 150px;
-}
-/* section three*/
-.streamlined {
+.info {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 110px;
-  padding-top: 200px;
-  text-align: right;
-  width: 1280px;
-  height: 286px;
-}
-.t_mgt {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: row;
 }
-.t_mgt > h3,
-p {
-  margin-top: 25px;
-}
-.text_mgt {
+.text {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
-  margin: 30px;
-  padding-top: 20px;
+  align-self: stretch;
 }
-.text_mgt > h3 {
-  margin-left: 15px;
-}
-.customer_support_image {
-  margin-top: 25px;
-  margin-left: 20px;
-}
-.cart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin: 30px;
-}
-.cart_text {
-  text-align: left;
-  margin-right: 20px;
-}
-.cart_shopping_image {
-  margin-right: 30px;
-}
-
-/* section four */
-.accessible {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 30px;
+.text p {
+  color: var(--light-black, #545454);
   text-align: justify;
-  width: 1280px;
-  height: 286px;
-  padding-top: 200px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-.access {
+.text h4 {
+  color: var(--primary-black, #1c1917);
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.information {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-.access_text {
-  margin-right: 25px;
-  text-align: right;
-}
 
-.custom_text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 50px;
+  flex-direction: row;
+  gap: 60px;
+  height: 101px;
+  width: 1160px;
+
+  padding: 0px 72px;
+  align-items: flex-start;
+  gap: 56px;
+  align-self: stretch;
 }
-.custom_text > h3 {
+.image {
   margin-right: 20px;
+  margin-top: 6px;
 }
-.customize {
+.visualize {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  padding-left: 70px;
-  margin-right: 50px;
-}
-/* last section */
-.online_wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 100px;
-}
-.online {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin-top: 50px;
-  width: 1280px;
-  height: 286px;
-  padding-top: 200px;
-  margin-left: 80px;
-}
-
-.seamless {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 453px;
   flex-direction: column;
-  margin-right: 75px;
+  align-items: flex-start;
+  gap: 12px;
+  padding-left: 25px;
 }
-.seamless > h3 {
-  margin-left: 30px;
-}
-.visualize_text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 100px;
-  margin-bottom: 20px;
-}
-
-.visualize_text > h3 {
-  margin-left: -55px;
-}
-.online_img {
-  margin-left: 30px;
-}
-.last_img {
-  width: 232px;
-  height: 238px;
-  margin-bottom: 20px;
-  margin-right: 140px;
-}
-.seamless {
-  text-align: right;
-  margin-left: 20px;
+.visualize p {
+  color: var(--light-black, #545454);
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   white-space: nowrap;
 }
-.binder {
-  height: 71px;
-  width: 1030px;
-  background: #c0f0a8;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  padding: 24px, 0px, 24px, 0px;
-  gap: 250px;
-  margin-top: 90px;
+.visualize h3 {
+  color: var(--primary-black, #1c1917);
+  text-align: justify;
+  font-family: Montserrat;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
-.potential {
+.visualize_container {
+  display: flex;
+  height: 455px;
+  padding: 56px 96px;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+  align-self: stretch;
+}
+.task_sample_container {
+  display: flex;
+  height: 455px;
+  padding: 56px 96px 70px 96px;
+  justify-content: center;
+  align-items: center;
+  gap: 120px;
+  align-self: stretch;
+  background: linear-gradient(
+    180deg,
+    rgba(229, 229, 229, 0.5) 0%,
+    rgba(229, 229, 229, 0) 100%
+  );
+}
+.customize h3 {
+  color: var(--primary-black, #1c1917);
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.customize p {
+  color: #545454;
+  text-align: justify;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  align-self: stretch;
+}
+.learn_more_btn {
+  width: 148px;
+  height: 36px;
+  border-radius: 6px;
+  background: #4ead1f;
+  border: none;
+  color: #ffffff;
+  margin-top: 40px;
+}
+.reviews_heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-black, #1c1917);
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.reviews_container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 100px;
+
+  width: 100%;
+  height: 522.21px;
+  background: linear-gradient(
+    180deg,
+    rgba(229, 229, 229, 0.5) 0%,
+    rgba(229, 229, 229, 0) 100%
+  );
+
+  padding: 56px 96px;
+
+  gap: 56px;
+  align-self: stretch;
 }
-.learn_btn {
+.reviews {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  color: #545454;
+}
+.icons {
+  width: 39px;
+  height: 39px;
+  background: #fff;
+  border-radius: 78.141px;
+  margin-top: 100px;
+  padding: 7.814px;
+}
+.onboarding_btn {
+  display: flex;
+  gap: 19px;
+  padding-top: 18px;
+}
+.profile {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.reviews_wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 34px;
+}
+.reviews_wrapper2 {
+  width: 300.28px;
+  height: 247.21px;
+
+  border-radius: 4.267px;
+  background: #fff;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1);
+  display: flex;
+  padding: 17.067px 25.601px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1 0 0;
+}
+.reviews_text p {
+  color: #545454;
+  white-space: nowrap;
+  padding-top: 15px;
+  height: 68px;
+  width: 249.08px;
+  align-self: stretch;
+  color: var(--primary-black, #1c1917);
+  text-align: justify;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.ratings {
+  margin-top: 40px;
+}
+.download_section {
+  background-image: url("Background.png");
+  height: 362px;
+  width: 1280px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 225px;
-  height: 33px;
-  text-align: center;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 25px;
+  flex-direction: row;
+  margin: 0 auto;
   margin-top: 50px;
-  background: #4ead1f;
-  color: #ffffff;
-  border: none;
-  padding: 7px, 20px, 7px, 20px;
-  border-radius: 6px;
-  gap: 4px;
+  display: flex;
+
+  padding: 20.888px 96px 0px 96px;
+  align-items: flex-end;
+  gap: 57px;
+  align-self: stretch;
 }
+.download_section_image {
+  margin-top: 100px;
+  margin-right: 100px;
+}
+.download_section_text {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20.888px;
+  align-self: stretch;
+  text-align: center;
+  display: flex;
+  padding: 52px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 46px;
+  flex: 1 0 0;
+  white-space: nowrap;
+}
+.download_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 46px;
+
+  color: #ffffff;
+}
+.download_btn1 {
+  border-radius: 6px;
+  background: var(--green, #4ead1f);
+  width: 148px;
+  height: 30px;
+  display: flex;
+  padding: 5px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
+  border: none;
+  color: #ffffff;
+}
+
 .questions {
   display: flex;
   justify-content: center;
@@ -307,12 +421,21 @@ p {
   margin-top: 60px;
   margin-bottom: 60px;
 }
+.asked_questions {
+  display: flex;
+  padding: 60px 96px;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  align-self: stretch;
+  height: 325px;
+  width: 100%;
+}
 .f_a_quees {
   font-weight: 500;
   font-size: 36px;
   line-height: 49px;
-  margin-top: 50px;
-  margin-bottom: 30px;
+  font-family: "Montserrat", sans-serif;
 }
 .first_row {
   display: flex;
