--- a/src/Pages/Create Password.css
+++ b/src/Pages/Create Password.css
@@ -7,6 +7,8 @@ body {
   background-color: white;
   background-repeat: no-repeat;
   zoom: 96%;
+  width: 1366px;
+  height: 640px;
 }
 h {
   text-align: center;
@@ -36,13 +38,13 @@ h {
 }
 p {
   text-align: left;
+  margin-bottom: 48px;
 }
 .password {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  margin-top: 48px;
   margin-bottom: 48px;
   width: 47.5vw;
   height: 30px;
@@ -81,7 +83,24 @@ p {
   padding: 96px 120px;
 }
 img {
-  width: fit-content;
-  height: fit-content;
+  width: 520px;
+  height: 740px;
   align-self: flex-end;
+}
+
+.error_message {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  color: red;
+}
+.error_message0 {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  margin-top: 0;
+  padding: 0;
+  color: red;
 }
