--- a/src/Pages/Password Recovery.css
+++ b/src/Pages/Password Recovery.css
@@ -53,3 +53,11 @@ p {
   text-align: center;
   margin-bottom: 60px;
 }
+.error_message {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  color: red;
+}
