--- a/src/Pages/Signuppage.css
+++ b/src/Pages/Signuppage.css
@@ -30,26 +30,14 @@ h {
   font-weight: 70;
   line-height: normal;
 }
-.top_bar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  margin-bottom: 15px;
-  width: 410px;
-}
 .name_email {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
   flex-direction: row;
   gap: 20px;
   margin-bottom: 36px;
 }
 .user_pass {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
   flex-direction: row;
   gap: 20px;
   margin-bottom: 48px;
@@ -119,4 +107,10 @@ p {
 img {
   width: 360px;
   height: 240px;
+}
+.error_message {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  color: red;
 }
