--- a/src/Pages/forgot password.css
+++ b/src/Pages/forgot password.css
@@ -74,3 +74,11 @@ img {
   height: 700px;
   align-self: flex-end;
 }
+.error_message {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  color: red;
+}
