--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
 }
-.title1 {
+h {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,6 +73,7 @@ body {
   justify-content: flex-start;
   flex-direction: row;
   gap: 20px;
+  margin-bottom: 30px;
 }
 .google_sign_in_btn {
   display: flex;
@@ -101,4 +102,12 @@ p {
 img {
   width: 480px;
   height: 420px;
+}
+.error_message {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  color: red;
 }
