--- a/src/Pages/Signuppage.css
+++ b/src/Pages/Signuppage.css
@@ -84,25 +84,49 @@ h {
 }
 .google_sign_up_btn {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-between;
   width: 310px;
   height: 30px;
   border-radius: 8px;
+  gap: 11.023px;
+  flex: 1 0 0;
+  color: var(--light-black, #545454);
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  border-radius: 5.512px;
+  white-space: nowrap;
 }
 .facebook_sign_up_btn {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: space-between;
   width: 310px;
   height: 30px;
   border-radius: 8px;
+  gap: 11.023px;
+  flex: 1 0 0;
+  color: var(--light-black, #545454);
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  border-radius: 5.512px;
+  white-space: nowrap;
 }
 p {
   text-align: center;
 }
 .go_to_signIn {
   margin-top: 48px;
+}
+.image_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 img {
   width: 360px;
@@ -113,4 +137,20 @@ img {
   flex-direction: column;
   font-size: 12px;
   color: red;
+}
+.google_icon {
+  width: 26px;
+  height: 26px;
+  margin-left: 2px;
+}
+.facebook_icon {
+  background: blue;
+  height: 24px;
+  width: 24px;
+  border-radius: 88px;
+  margin-left: 2px;
+}
+.other_signUp button {
+  display: flex;
+  gap: 50px;
 }
