--- a/src/Pages/Create Password.css
+++ b/src/Pages/Create Password.css
@@ -4,17 +4,23 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
   zoom: 96%;
-  width: 1366px;
-  height: 640px;
 }
-h {
+.body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 336px;
+}
+.heading1 {
   text-align: center;
   margin-bottom: 76px;
 }
-.title1 {
+.title2 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -36,11 +42,11 @@ h {
   box-sizing: border-box;
   margin-bottom: 48px;
 }
-p {
+.enter {
   text-align: left;
   margin-bottom: 48px;
 }
-.password {
+.new_password {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -70,22 +76,28 @@ p {
   height: 30px;
   padding: 18px 20px;
 }
-.image_box {
+.createkey_img {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-end;
 }
-.box1 {
+.box2 {
   display: flex;
   flex-direction: column;
   margin-right: 120px;
-  padding: 96px 120px;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 0;
 }
-img {
-  width: 520px;
-  height: 740px;
+.createpassimg {
+  width: 351px;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
   align-self: flex-end;
+  justify-content: flex-end;
 }
 
 .error_message {
