--- a/src/Pages/Password Recovery.css
+++ b/src/Pages/Password Recovery.css
@@ -1,14 +1,15 @@
-body {
+.recover {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   margin: 0;
-  padding: 48px 240px;
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
 }
-.title1 {
+.title3 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -49,7 +50,7 @@ body {
   height: 30px;
   padding: 18px 20px;
 }
-p {
+.verify {
   text-align: center;
   margin-bottom: 60px;
 }
