--- a/src/Pages/Signuppage.css
+++ b/src/Pages/Signuppage.css
@@ -1,14 +1,14 @@
-body {
+.page-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   margin: 0;
-  padding: 96px 120px;
-  gap: 56px;
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
-  zoom: 96%;
+  gap: 56px;
 }
 .sign_up_form {
   display: flex;
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
 }
-h {
+.signup_header {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -70,7 +70,7 @@ h {
   border-radius: 6px;
   background: #4ead1f;
   color: white;
-  width: 46.5vw;
+  width: 638px;
   height: 30px;
   padding: 18px 20px;
 }
@@ -116,19 +116,16 @@ h {
   border-radius: 5.512px;
   white-space: nowrap;
 }
-p {
-  text-align: center;
-}
 .go_to_signIn {
   margin-top: 48px;
 }
-.image_box {
+.sign_up_image {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-img {
+.image1 {
   width: 360px;
   height: 240px;
 }
@@ -153,4 +150,26 @@ img {
 .other_signUp button {
   display: flex;
   gap: 50px;
+}
+.named {
+  display: flex;
+  flex-direction: column;
+}
+.mailed {
+  display: flex;
+  flex-direction: column;
+}
+.user_named {
+  display: flex;
+  flex-direction: column;
+}
+.passworded {
+  display: flex;
+  flex-direction: column;
+}
+.terms {
+  text-align: center;
+}
+.signed {
+  text-align: center;
 }
