--- a/src/Pages/forgot password.css
+++ b/src/Pages/forgot password.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
-
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
   zoom: 96%;
@@ -31,12 +31,12 @@ body {
   line-height: normal;
   margin-bottom: 76px;
 }
-p {
+.mailer {
   text-align: center;
-  font-size: 25px;
+  font-size: 23px;
   margin-bottom: 48px;
 }
-.email {
+.email2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -50,26 +50,31 @@ p {
   align-items: center;
   justify-content: center;
   margin-bottom: 48px;
-  border-radius: 6px;
+  border-radius: 5px;
   background: #4ead1f;
   color: white;
   width: 48.5vw;
   height: 30px;
   padding: 18px 20px;
 }
-.image_box {
+.forgot_image {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: flex-end;
+  min-height: 100vh;
+  padding: 0;
 }
 .box1 {
   display: flex;
   flex-direction: column;
   margin-right: 120px;
-  padding: 96px 120px;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 0;
 }
-img {
+.image3 {
   width: auto;
   height: 700px;
   align-self: flex-end;
