--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,13 +1,13 @@
-body {
+.page-container1 {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   margin: 0;
-  padding: 96px 120px;
+  padding: 0;
   background-color: white;
   background-repeat: no-repeat;
-  zoom: 97%;
 }
 .sign_in_form {
   display: flex;
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
 }
-h {
+.signin_header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,25 +33,25 @@ h {
 }
 .pass_email {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
   margin-bottom: 48px;
   gap: 20px;
 }
-.email {
+.email1 {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   width: 300px;
   height: 30px;
 }
-.password {
+.password1 {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   width: 300px;
   height: 30px;
 }
@@ -59,18 +59,18 @@ h {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 36px;
+  margin-bottom: 48px;
   border-radius: 6px;
   background: #4ead1f;
   color: white;
-  width: 46.5vw;
+  width: 638px;
   height: 30px;
   padding: 18px 20px;
 }
 .other_signIn {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
   gap: 20px;
   margin-bottom: 30px;
@@ -85,6 +85,7 @@ h {
   gap: 11.023px;
   flex: 1 0 0;
   color: var(--light-black, #545454);
+  background: white;
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-style: normal;
@@ -102,6 +103,7 @@ h {
   gap: 11.023px;
   flex: 1 0 0;
   color: var(--light-black, #545454);
+  background: white;
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-style: normal;
@@ -109,21 +111,18 @@ h {
   border-radius: 5.512px;
   white-space: nowrap;
 }
-p {
-  text-align: center;
-}
 .go_to_sign_up {
   margin-top: 48px;
 }
-.image_box {
+.login_image {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-img {
-  width: 480px;
-  height: 420px;
+.image2 {
+  width: 350px;
+  height: 330px;
 }
 .error_message {
   display: flex;
@@ -148,4 +147,21 @@ img {
 .other_signIn button {
   display: flex;
   gap: 50px;
+}
+.emailed {
+  display: flex;
+  flex-direction: column;
+}
+.passcode {
+  display: flex;
+  flex-direction: column;
+}
+.forgot {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.no_account {
+  text-align: center;
 }
