--- a/src/Pages/Signuppage.css
+++ b/src/Pages/Signuppage.css
@@ -24,7 +24,7 @@
   justify-content: center;
   color: #545454;
   text-align: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: Noto Sans;
   font-size: 26px;
   font-style: normal;
   font-weight: 70;
@@ -42,23 +42,26 @@
   gap: 20px;
   margin-bottom: 48px;
 }
-.input_button {
+.name {
   display: flex;
   height: 30px;
-  min-width: 502px;
-  padding: 18px;
-  align-items: center;
-  gap: 11.023px;
-  flex: 1 0 0;
-  color: var(--light-black, #545454);
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  border-radius: 5.512px;
-  white-space: nowrap;
+  width: 300px;
 }
-
+.email {
+  display: flex;
+  height: 30px;
+  width: 300px;
+}
+.user_name {
+  display: flex;
+  height: 30px;
+  width: 300px;
+}
+.password {
+  display: flex;
+  height: 30px;
+  width: 300px;
+}
 .sign_up_btn {
   display: flex;
   align-items: center;
@@ -70,15 +73,11 @@
   width: 638px;
   height: 30px;
   padding: 18px 20px;
-  gap: 4px;
-  align-self: stretch;
-  margin-top: 40px;
-  font-size: 20px;
 }
 .other_signUp {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   flex-direction: row;
   margin-bottom: 48px;
   gap: 20px;
