--- a/src/Pages/Signuppage.css
+++ b/src/Pages/Signuppage.css
@@ -16,6 +16,7 @@
   align-items: center;
   flex-direction: column;
   box-sizing: border-box;
+  padding-left: 10px;
 }
 .signup_header {
   display: flex;
