--- a/src/Pages/forgot password.css
+++ b/src/Pages/forgot password.css
@@ -44,18 +44,22 @@ body {
   margin-bottom: 56px;
   width: 48vw;
   height: 30px;
+  padding-left: 10px;
+  border-radius: 6px;
+  border: 1px solid #545454;
 }
 .sendCode_Btn {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 48px;
-  border-radius: 5px;
+  border-radius: 6px;
   background: #4ead1f;
   color: white;
   width: 48.5vw;
   height: 30px;
   padding: 18px 20px;
+  border: none;
 }
 .forgot_image {
   display: flex;
