--- a/src/Pages/Password Recovery.css
+++ b/src/Pages/Password Recovery.css
@@ -37,6 +37,9 @@
   margin-bottom: 48px;
   width: 46.5vw;
   height: 30px;
+  padding-left: 10px;
+  border-radius: 6px;
+  border: 1px solid #545454;
 }
 .next_btn {
   display: flex;
@@ -49,16 +52,19 @@
   width: 47.3vw;
   height: 30px;
   padding: 18px 20px;
+  border-radius: 6px;
+  border: none;
 }
 .verify {
   text-align: center;
   margin-bottom: 60px;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
 }
 .error_message {
   display: flex;
   flex-direction: column;
   font-size: 12px;
   margin: 0;
-  padding: 0;
   color: red;
 }
